force-app/main/default/objects/FinServ__ChargesAndFees__c/fields/Fee_Id__c.field-meta.xml
<CustomField>
    <fullName>Fee_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Source ID obtained for Settlement Service</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Fee Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>