force-app/main/default/objects/FinServ__ChargesAndFees__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Description of what the fee is for</description>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CODE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>CODE_REGISTRATION_OF_MORTGAGE</fullName>
                <label>Registration of Mortgage</label>
            </value>
            <value>
                <fullName>CODE_REGISTRATION_OF_DISCHARGE_MORTGAGE</fullName>
                <label>Registration of Discharge of Mortgage</label>
            </value>
            <value>
                <fullName>CODE_DISCHARGE_OF_LOAN</fullName>
                <label>Discharge of Loan</label>
            </value>
            <value>
                <fullName>CODE_REGISTRATION_OF_CAVEAT</fullName>
                <label>Registration of Caveat</label>
            </value>
            <value>
                <fullName>CODE_REGISTRATION_OF_CAVEAT_WITHDRAWAL</fullName>
                <label>Registration of Caveat Withdrawal</label>
            </value>
            <value>
                <fullName>CODE_REGISTRATION_OF_NAME_CHANGE</fullName>
                <label>Registration of Name Change</label>
            </value>
            <value>
                <fullName>CODE_PRODUCTION_FEE</fullName>
                <label>Production Fee</label>
            </value>
            <value>
                <fullName>CODE_POST_SETTLEMENT_DISCHARGE_MORTGAGE</fullName>
                <label>Post Settlement Discharge Mortgage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>