force-app/main/default/objects/FinServ__ChargesAndFees__c/fields/Mortgage_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Contract_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Mortgage Contract</description>
    <label>Mortgage Contract ID</label>
    <referenceTo>Mortgage_Contract__c</referenceTo>
    <relationshipLabel>Charges And Fees</relationshipLabel>
    <relationshipName>Charges_And_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>