force-app/main/default/objects/FinServ__ChargesAndFees__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to settlement</description>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Charges And Fees</relationshipLabel>
    <relationshipName>Charges_And_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>