force-app/main/default/objects/FinServ__ChargesAndFees__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Source of the Fees e.g.: ANZ quoted fee, eConveyancing or Government (Posted) fees</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOURCE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>SOURCE_ANZ</fullName>
                <label>ANZ Quoted Fee details</label>
            </value>
            <value>
                <fullName>SOURCE_ECONVEYANCER</fullName>
                <label>EConveyancing  Fee Details</label>
            </value>
            <value>
                <fullName>SOURCE_GOVERNMENT</fullName>
                <label>Posted Fees Details</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>