force-app/main/default/objects/FinServ__ChargesAndFees__c/recordTypes/Settlement_Fee_Details.recordType-meta.xml
<RecordType>
    <fullName>Settlement_Fee_Details</fullName>
    <active>true</active>
    <label>Settlement Fee Details</label>
</RecordType>